--- a/single-price-grid-component/css/style.css
+++ b/single-price-grid-component/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Karla:400,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Karla:400,700&display=swap");
 
 /* Minimal CSS Reset */
 
@@ -44,19 +44,17 @@ button {
   font-family: inherit;
 }
 
-
-
 /* Custom CSS */
 
 :root {
   --color-white: white;
-  --color-cyan: #2BB3B1;
-  --color-celery: #4ABEBD;
-  --color-bright-yellow: #BEE032;
+  --color-cyan: #2bb3b1;
+  --color-celery: #4abebd;
+  --color-bright-yellow: #bee032;
   --color-bright-yellow-hover: #62d933;
-  --color-light-gray: #C1C6D1;
-  --color-grayish-blue: #73D9DD;
-  --border-grid: .7rem;
+  --color-light-gray: #c1c6d1;
+  --color-grayish-blue: #73d9dd;
+  --border-grid: 0.7rem;
 }
 
 html,
@@ -64,7 +62,7 @@ body {
   width: 100%;
   height: 100%;
   font-family: Karla;
-  background: #F0F0F0;
+  background: #f0f0f0;
 }
 
 h1 {
@@ -99,8 +97,8 @@ button:hover {
   display: grid;
   height: 100vh;
   width: 100vw;
-	align-items: center;
-	justify-items: center;
+  align-items: center;
+  justify-items: center;
 }
 
 .container {
@@ -112,9 +110,9 @@ button:hover {
     "sign-up why-us";
   grid-template-rows: 48% 52%;
   grid-template-columns: 50% 50%;
-	background: white;
-	border-radius: var(--border-grid);
-	box-shadow: 0px 0px 20px #8181811a;
+  background: var(--color-white);
+  border-radius: var(--border-grid);
+  box-shadow: 0px 0px 25px #8181811a;
 }
 
 .sctn-join-community {
@@ -174,21 +172,19 @@ button:hover {
   line-height: 1.4;
 }
 
-
 @media screen and (max-width: 670px) {
-  
   h1 {
     font-size: 1.3rem;
   }
-  
+
   h2 {
     font-size: 1rem;
   }
-  
+
   p {
-    font-size: .85rem;
+    font-size: 0.85rem;
   }
-  
+
   button {
     height: 2.9rem;
     font-size: 1rem;
@@ -223,9 +219,9 @@ button:hover {
 
   .sctn-join-community h2 {
     margin-top: 1rem;
-    margin-bottom: .76rem;
+    margin-bottom: 0.76rem;
   }
-  
+
   .sctn-sign-up {
     border-radius: 0;
   }
@@ -236,12 +232,12 @@ button:hover {
 
   .sctn-sign-up .price-info {
     font-size: 1.9rem;
-    margin-top: .83rem;
+    margin-top: 0.83rem;
     margin-bottom: 0.51rem;
   }
-  
+
   .sctn-sign-up .price-info .price-duration {
-    font-size: .98rem;
+    font-size: 0.98rem;
   }
 
   .sctn-why-us {
@@ -250,8 +246,7 @@ button:hover {
 
   .sctn-why-us ul {
     margin-top: 1.02rem;
-    font-size: .8rem;
+    font-size: 0.8rem;
     line-height: 1.8;
   }
- 
 }
